# XGBoostStudio

./: .gitattributes  .gitignore  AGENTS.md  README.md  开发规范.md  需求文档.md  验收标准文档.md
server/: .coverage  build.spec  main.py  pyproject.toml
server/cli/: __init__.py  api_client.py  deeplink.py  main.py  repl.py  server_proc.py
server/db/: database.py  models.py
server/routers/: automl.py  datasets.py  models.py  params.py  prediction.py  reports.py  training.py  tuning.py  wizard.py
server/schemas/: dataset.py  model.py  narrative.py
server/scripts/: fetch_builtin_samples.py
server/services/: automl_preprocess_service.py  automl_service.py  chart_service.py  dataset_narrative_service.py  dataset_service.py  eval_service.py  feature_service.py  leakage_service.py  params_service.py  prediction_service.py  provenance.py  report_methodology.py  report_service.py  target_recommend.py  training_service.py  tuning_service.py  wizard_service.py
server/tests/: acceptance_test.py  check_schema.py  check_wizard.py  conftest.py  create_fixtures.py  e2e_validate.py  test_api_core.py  test_api_robustness.py  test_authority_breast_cancer_pipeline.py  test_automl.py  test_cli_deeplink.py  test_cli_smoke.py  test_data_narrative.py  test_dataset_service.py  test_eval_protocol_g2_auth2.py  test_eval_service.py  test_feature_analysis_g3a.py  test_feature_service.py  test_model_analysis_g3b.py  test_models_api.py  test_provenance_g2_auth1.py  test_report_g2_auth4.py  test_report_g3c.py  test_report_templates_contract.py  test_target_recommend.py  test_trust_chain_contract.py  (+1 more)
(+372 files in other folders)
