[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.42.0",
    "xgboost>=3.2.0",
]
