[project]
name = "server"
version = "0.5.1"
description = "XGBoost Studio backend API"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.0",
    "matplotlib>=3.8",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.42.0",
    "xgboost>=3.2.0",
]

[project.scripts]
xs-studio = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.1",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["serial: tests that must not run in parallel with other DB-heavy tests"]
